[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/topdown-shooter/PNG/weapon_gun.png" type="Texture" id=1]
[ext_resource path="res://Weapons/Weapon.gd" type="Script" id=2]
[ext_resource path="res://Assets/audio/reload.ogg" type="AudioStream" id=3]
[ext_resource path="res://Assets/audio/shoot.ogg" type="AudioStream" id=4]

[node name="KinematicBody2D" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="weapon_gun" type="Sprite" parent="."]
position = Vector2( -0.0556798, -7.84397e-05 )
texture = ExtResource( 1 )

[node name="AttackCooldown" type="Timer" parent="."]
one_shot = true

[node name="ReloadCooldown" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ShootSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="ReloadSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="Muzzle" type="Position2D" parent="."]
position = Vector2( 14.4957, 0.0883884 )
